Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9453

mysql_upgrade.exe error when mysql is migrated to mariadb

Details

    • 5.5.48-0

    Description

      Hi,

      im migrating from mysql(5.1.73 64-bit) to mariadb 5.5.43 64-bit:
      1. delete mysql/bin, mysql/share
      2. unzip mariadb
      3. update my.ini file
      4. start MariaDB service
      5. run mysql_upgrade.exe -u user -ppassword --port 3306 -f --upgrade-system-tables
      and at this point i got the following error:

      FATAL ERROR: Upgrade failed

      The --upgrade-system-tables option was used, databases won't be touched.
      Phase 1/4: Fixing views from mysql
      MySQL upgrade detected
      '""' is not recognized as an internal or external command,
      operable program or batch file.

      The migration has always worked. It has been not working since version 5.5.43.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            eidbadr Eid Badr
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.