MDEV-9453 mysql_upgrade.exe error when mysql is migrated to mariadb

mysqlcheck tool can be used even if opt_systables_only is true
(to upgrade views from mysql - that overrides opt_systables_only)